# euroseker

./: .gitignore  Cargo.toml  example.config.json  love_notes.txt
.github/workflows/: ci.yml
src/: main.rs  utils.rs
src/exchangerate/: email.rs  love_note.rs  mod.rs  monitor.rs  plotter.rs
