[package]
name = "euroseker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.39", features = ["serde"]}
dotenvy = "0.15.7"
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
